assets/bulma.sass
@charset "utf-8"

$pre-padding: 0
$message-body-pre-background-color: transparent

$section-padding: 1.5rem
$footer-padding: 2rem


/*! bulma.io v0.7.5 | MIT License | github.com/jgthms/bulma */
@import "sass/utilities/_all"
@import "sass/base/_all"
@import "sass/elements/tag.sass"
@import "sass/components/message.sass"
@import "sass/components/navbar.sass"
@import "sass/components/panel.sass"
@import "sass/grid/_all"
@import "sass/form/shared.sass"
@import "sass/form/tools.sass"
@import "sass/layout/footer.sass"
@import "sass/layout/section.sass"

/* own custom elements */
.icon
  align-items: center
  display: inline-flex
  justify-content: center
  height: 1rem
  width: 1rem

// icons
.icon-download
  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' color='white' width='1rem' height='1rem' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><path d='M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4'></path><polyline points='7 10 12 15 17 10'></polyline><line x1='12' y1='15' x2='12' y2='3'></line></svg>")

.icon-success
  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' color='%2323d160' width='1rem' height='1rem' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><path d='M22 11.08V12a10 10 0 1 1-5.93-9.14'></path><polyline points='22 4 12 14.01 9 11.01'></polyline></svg>")

.icon-failure
  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' color='%23ff3860' width='1rem' height='1rem' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><circle cx='12' cy='12' r='10'></circle><line x1='15' y1='9' x2='9' y2='15'></line><line x1='9' y1='9' x2='15' y2='15'></line></svg>")

.icon-pending
  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='1rem' height='1rem' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><circle cx='12' cy='12' r='10'></circle></svg>")

